--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
-.p {
-    display: grid;
-    grid-template-columns: repeat(3, 50px);
-    grid-template-rows: repeat(3, 50px);
-    
-}
-.b{
+
+div{
     display: flex;
     justify-content: center;
     align-items: center;
