--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-
-div{
+.brett {
+    display: grid;
+    grid-template-columns: repeat(3, 50px);
+    grid-template-rows: repeat(3, 50px);
+}
+.rute{
     display: flex;
     justify-content: center;
     align-items: center;
